--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     -->
     <title>My Recipes</title>
   </head>
-  <body>
+  <body style="margin: 0">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!-- for vite 👇 -->
